--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ gspread>=5.12.0
 google-auth>=2.23.0
 google-auth-oauthlib>=1.1.0
 google-auth-httplib2>=0.1.1
+google-api-python-client>=2.100.0
 flask>=3.0.0
 flask-login>=0.6.3
 werkzeug>=3.0.0
